# walmart_sales_forecast

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/interim/: inspected_data.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data_preprocessing.ipynb
